--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "cordova": "^9.0.0",
+    "cordova-android": "^8.1.0",
+    "cordova-plugin-splashscreen": "^5.0.3",
     "corejs": "^1.0.0",
     "jasmine-core": "^3.5.0",
     "rxjs": "~6.5.1",
