--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "corejs": "^1.0.0",
+    "minimist": ">=1.2.3",
     "node-forge": ">=0.10.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
+    "yargs-parser": ">=13.1.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -48,6 +50,7 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
+    "serialize-javascript": ">=3.1.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
